Update tests and examples for new events.

--- a/examples/hello.html
+++ b/examples/hello.html
@@ -35,7 +35,7 @@
     </div>
     
     <script>
-    Batman.onready(function() {
+    Batman.ready(function() {
         
         person = Batman({
             firstName: $binding(''),
