--- a/tests/batman/manual/hello.html
+++ b/tests/batman/manual/hello.html
@@ -21,7 +21,7 @@
     </div>
     
     <script type="text/javascript">
-        Batman.onready(function() {
+        Batman.ready(function() {
             
             person = Batman({
                 firstName: $binding(''),
