--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -10,7 +10,7 @@
     
     <script type="text/javascript" src="../../lib/batman.js"></script>
     
-    <!-- We do it this way instead of using a global Batman.onready and Batman.require in order to ensure test result order -->
+    <!-- We do it this way instead of using a global Batman.ready and Batman.require in order to ensure test result order -->
     <script type="text/javascript" src="utilities.js"></script>
     <script type="text/javascript" src="mixins.js"></script>
     <script type="text/javascript" src="bindings.js"></script>
