--- a/tests/batman/manual/counter.html
+++ b/tests/batman/manual/counter.html
@@ -18,7 +18,7 @@
     </div>
     
     <script type="text/javascript">
-        Batman.onready(function(){
+        Batman.ready(function(){
             
             view = Batman.View({
                 node: 'container',
