New Batman.Request API.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="mixins.js"></script>
     <script type="text/javascript" src="bindings.js"></script>
     <script type="text/javascript" src="events.js"></script>
+    <script type="text/javascript" src="request.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="controller.js"></script>
     <script type="text/javascript" src="model.js"></script>
