Use empty objects for transactions, move tests into own file. Better performance, less memory for transactions.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="utilities.js"></script>
     <script type="text/javascript" src="mixins.js"></script>
     <script type="text/javascript" src="bindings.js"></script>
+    <script type="text/javascript" src="transactions.js"></script>
     <script type="text/javascript" src="events.js"></script>
     <script type="text/javascript" src="request.js"></script>
     <script type="text/javascript" src="app.js"></script>
