--- a/examples.html
+++ b/examples.html
@@ -10,7 +10,6 @@
   <!-- Begin CSS -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/fancybox.css">
   <!--[if !IE 7]><style type="text/css">#content-wrapper{display:table;height:100%}</style><![endif]-->
   <!-- End CSS -->
   
@@ -23,7 +22,6 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <script type="text/javascript" src="js/scripts.js"></script>
   <script type="text/javascript" src="js/jquery.tweet.js"></script>
-  <script type="text/javascript" src="js/jquery.easing-1.3.pack.js"></script>
   <!-- End scripts -->
 
 </head>
@@ -67,7 +65,7 @@
       <div id="content-column-1">
         
         <ul class="feature-box">
-          <li class="feature-image"><a id="fancybox-image" href="images/sample-img.jpg"><img src="images/sample-img-sm.jpg" width="268" height="161"></a></li>
+          <li class="feature-image"><a href="alfred.html"><img src="images/alfred_small.jpg" width="268" height="161"></a></li>
           <li class="feature-description">
             <h4>alfred: batman's todo manager</h4>
             <p>the canonical microframework demo, in five lines of trivial code in batman.js</p>
@@ -75,7 +73,7 @@
         </ul>
 
         <ul class="feature-box">
-          <li class="feature-image"><a id="fancybox-image" href="images/sample-img.jpg"><img src="images/sample-img-sm.jpg" width="268" height="161"></a></li>
+          <li class="feature-image"><a href="twitter.html"><img src="images/twitter_small.jpg" width="268" height="161"></a></li>
           <li class="feature-description">
             <h4>twitter comments</h4>
             <p>the most useless, inane concept i could think of for an app. but a full app using most features of batman.js</p>
@@ -89,7 +87,7 @@
       <div id="content-column-2">
 
         <ul class="feature-box">
-          <li class="feature-image"><a id="fancybox-image" href="images/sample-img.jpg"><img src="images/sample-img-sm.jpg" width="268" height="161"></a></li>
+          <li class="feature-image"><a href="crime.html"><img src="images/batman_small.png" width="268" height="161"></a></li>
           <li class="feature-description">
             <h4>crime fighting</h4>
             <p>a fun, useless demo from jsconf 2011</p>
