gonna commit this now

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         <div id="content-column-1">
           
           <ul class="feature-box">
-            <li class="feature-image"><a href="features.html"><img src="images/sample-img-sm.jpg" width="268" height="161"></a></li>
+            <li class="feature-image"><a href="features.html"><img src="images/unicorn.png" width="268" height="161"></a></li>
             <li class="feature-description">
-              <h4>features</h4>
+              <h4>goals and features</h4>
               <p>an complete overview of all the goals batman.js tries to solve</p>
             </li>
           </ul>
