--- a/examples.html
+++ b/examples.html
@@ -116,5 +116,9 @@
   </div>
   <!-- End footer-wrapper -->
 
+  <script type="text/javascript" src="http://www.observerapp.com/record.js"></script>
+  <script type="text/javascript">
+  try { Observerapp.record("4dc091148a0bee537a0225d9"); } catch(e) {};
+  </script>
 </body>
 </html>
