--- a/features.html
+++ b/features.html
@@ -82,6 +82,8 @@
         <h2>giant feature list</h2>
         <p>The heart of batman.js is a tiny microframework that makes building web apps easier and more beautiful. It embodies a set of principles that makes trivial the parts of development that should be trivial.</p>
         <p>If you are starting a new app, batman.js is also an optional full stack framework that embodies the same principles. It sports a utility belt that includes a toolchain, a powerful node.js server, and a push based persistence layer.</p>
+        <p>It's also worth defining a microframework as it applies here: batman.js only includes code to do what it needs to do in order to run. It won't give you utilities to work with objects like Prototype.js or manipulate the DOM like jQuery. But batman.js is a good JavaScript citizen; it won't pollute the global namespace and you can use it with any other library.</p>
+        <p>For example, if you're doing a lot of DOM manipulation, you can, and probably should, still include something like jQuery. If you want to use a full UI library like jQuery UI, UKI, or even (with a bit of hackery) Cappuccino, batman.js will happily work with those as well.</p>
         <br />
         
         <a name="speed"></a>
