--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- Begin intro-statement -->
         <div id="intro-statement">
           <h2>Build web apps beautifully and quickly</h2>
-          <p>batman.js is a full-stack microframework extracted from real use and designed to maximize developer and desiner happiness. It favors convention over configuration, template-less views, and high performance by simply not doing very much. It all adds up to blazingly fast web apps with a great development process; it's batman.js.</p>
+          <p>batman.js is a full-stack microframework extracted from real use and designed to maximize developer and designer happiness. It favors convention over configuration, template-less views, and high performance by simply not doing very much. It all adds up to blazingly fast web apps with a great development process; it's batman.js.</p>
           <p>Want to see how it works? <a href="features.html">All the features</a> or <a href="examples.html">see some examples</a>.</p>
         </div>
         <!-- End intro-statement -->
