Fixed commented out title

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
       <h3><a class="icon-rss">RSS Feed</a>From the Blog</h3>
       <ul class="blog-list">
-        <!--><li><a href="#"><h5>TODO: Do not forget to add a blog before deploying.</h5></a></li>-->
+        <!--<li><a href="#"><h5>TODO: Do not forget to add a blog before deploying.</h5></a></li>-->
         <li class="blog-post-date">Posted May 03 by Nick Small</li>
         <li>
           <p>Thanks for your interest in batman.js. We're working hard to get the code released under the MIT license very soon.</p>
