Add jsdom to console test environment, routing tests to app_test.coffee, and controller tests.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -14,6 +14,7 @@
     <script type="text/coffeescript" src="utilities_test.coffee"></script>
     <script type="text/coffeescript" src="object_test.coffee"></script>
     <script type="text/coffeescript" src="app_test.coffee"></script>
+    <script type="text/coffeescript" src="controller_test.coffee"></script>
 </head>
 
 <body>
