Updated test_helper.coffee with a new helper class and some examples and started a test for Batman.View.
 - added MockClass to test_helper. MockClass tracks all instances of it that are created and defines some helpers for defining common methods on its instances.
 - added comments and examples to the test_helper to let the newbie in on the secrets of the spies
 - added a view test

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -15,6 +15,7 @@
     <script type="text/coffeescript" src="object_test.coffee"></script>
     <script type="text/coffeescript" src="app_test.coffee"></script>
     <script type="text/coffeescript" src="controller_test.coffee"></script>
+    <script type="text/coffeescript" src="view_test.coffee"></script>
 </head>
 
 <body>
