--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -16,6 +16,7 @@
     <script type="text/coffeescript" src="app_test.coffee"></script>
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="view_test.coffee"></script>
+    <script type="text/coffeescript" src="request_test.coffee"></script>
 </head>
 
 <body>
