Added some elementary tests for Batman.View rendering (which in turn tests Batman.DOM)
 - added up to date jQuery, fiddled with jsdom to get it to work in command line env
 - fixed some bugs with Batman.DOM.contentFor and Batman.DOM.yield encountered during testing where the content had to come before the yield

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" href="../lib/qunit.css" type="text/css" media="screen" />
 
+    <script type="text/javascript" src="../lib/jquery.js"></script>
     <script type="text/javascript" src="../lib/qunit.js"></script>
     <script type="text/javascript" src="../../lib/coffee-script.js"></script>
 
