--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -7,6 +7,7 @@
 
     <script type="text/javascript" src="../lib/jquery.js"></script>
     <script type="text/javascript" src="../lib/qunit.js"></script>
+    <script type="text/javascript">QUnit.config.autostart = false</script>
     <script type="text/javascript" src="../../lib/coffee-script.js"></script>
 
     <script type="text/coffeescript" src="test_helper.coffee"></script>
@@ -17,6 +18,7 @@
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="view_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script>
+    <script type="text/coffeescript">QUnit.start()</script>
 </head>
 
 <body>
