--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -18,6 +18,7 @@
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="view_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script>
+    <script type="text/coffeescript" src="keypaths_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
 </head>
 
