--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -17,7 +17,7 @@
     <script type="text/coffeescript" src="app_test.coffee"></script>
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="view_test.coffee"></script>
-    <script type="text/coffeescript" src="request_test.coffee"></script>
+    <!-- <script type="text/coffeescript" src="request_test.coffee"></script> -->
     <script type="text/coffeescript" src="keypath_test.coffee"></script>
     <script type="text/coffeescript" src="observable_test.coffee"></script>
     <script type="text/coffeescript" src="trigger_set_test.coffee"></script>
