Clean up events, mixins, and some tests.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -12,6 +12,9 @@
 
     <script type="text/coffeescript" src="test_helper.coffee"></script>
     <script type="text/coffeescript" src="../../src/batman.coffee"></script>
+    <script type="text/coffeescript" src="../../src/batman.nodep.coffee"></script>
+    <script type="text/coffeescript">Batman.exportGlobals()</script>
+    
     <script type="text/coffeescript" src="utilities_test.coffee"></script>
     <script type="text/coffeescript" src="object_test.coffee"></script>
     <script type="text/coffeescript" src="app_test.coffee"></script>
