Refactor triggers and fix edge cases for observing deep keypaths

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -23,6 +23,7 @@
     <!-- <script type="text/coffeescript" src="request_test.coffee"></script> -->
     <script type="text/coffeescript" src="keypath_test.coffee"></script>
     <script type="text/coffeescript" src="observable_test.coffee"></script>
+    <script type="text/coffeescript" src="trigger_test.coffee"></script>
     <script type="text/coffeescript" src="trigger_set_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
 </head>
