Dumb sets and hashes

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -25,6 +25,8 @@
     <script type="text/coffeescript" src="observable_test.coffee"></script>
     <script type="text/coffeescript" src="trigger_test.coffee"></script>
     <script type="text/coffeescript" src="trigger_set_test.coffee"></script>
+    <script type="text/coffeescript" src="hash_test.coffee"></script>
+    <script type="text/coffeescript" src="set_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
 </head>
 
