Batman.Property and Batman.AutonomousProperty

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -28,6 +28,7 @@
     <script type="text/coffeescript" src="hash_test.coffee"></script>
     <script type="text/coffeescript" src="set_test.coffee"></script>
     <script type="text/coffeescript" src="sortable_set_test.coffee"></script>
+    <script type="text/coffeescript" src="property_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
 </head>
 
