--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -19,15 +19,14 @@
     <script type="text/coffeescript" src="app_test.coffee"></script>
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="view_test.coffee"></script>
-     <script type="text/coffeescript" src="request_test.coffee"></script> 
+    <script type="text/coffeescript" src="request_test.coffee"></script> 
     <script type="text/coffeescript" src="keypath_test.coffee"></script>
     <script type="text/coffeescript" src="observable_test.coffee"></script>
-    <script type="text/coffeescript" src="trigger_test.coffee"></script>
-    <script type="text/coffeescript" src="trigger_set_test.coffee"></script>
     <script type="text/coffeescript" src="hash_test.coffee"></script>
     <script type="text/coffeescript" src="set_test.coffee"></script>
     <script type="text/coffeescript" src="sortable_set_test.coffee"></script>
     <script type="text/coffeescript" src="property_test.coffee"></script>
+    <script type="text/coffeescript" src="observable_property_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
 </head>
 
