Updated Cakefile to add dist action.
 - Abstracted all the business out of the Cakefile into an npm package, 'muffin'
 - added `cake --dist build` for building minified versions into lib/dist
 - added `cake stats` actions for tracking compressed size
 - redid the request tests to not rely on an adapter
 - fixed a few issues with command line test runs, they still don't work though.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -12,7 +12,6 @@
 
     <script type="text/coffeescript" src="test_helper.coffee"></script>
     <script type="text/coffeescript" src="../../src/batman.coffee"></script>
-    <script type="text/coffeescript" src="../../src/batman.nodep.coffee"></script>
     <script type="text/coffeescript">Batman.exportGlobals()</script>
     
     <script type="text/coffeescript" src="utilities_test.coffee"></script>
@@ -20,7 +19,7 @@
     <script type="text/coffeescript" src="app_test.coffee"></script>
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="view_test.coffee"></script>
-    <!-- <script type="text/coffeescript" src="request_test.coffee"></script> -->
+     <script type="text/coffeescript" src="request_test.coffee"></script> 
     <script type="text/coffeescript" src="keypath_test.coffee"></script>
     <script type="text/coffeescript" src="observable_test.coffee"></script>
     <script type="text/coffeescript" src="trigger_test.coffee"></script>
