Model validations and some further implementation and tests.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -18,6 +18,7 @@
     <script type="text/coffeescript" src="object_test.coffee"></script>
     <script type="text/coffeescript" src="app_test.coffee"></script>
     <script type="text/coffeescript" src="controller_test.coffee"></script>
+    <script type="text/coffeescript" src="model_test.coffee"></script>
     <script type="text/coffeescript" src="view_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script> 
     <script type="text/coffeescript" src="keypath_test.coffee"></script>
