Bullshit bullshit bullshit

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../../lib/coffee-script.js"></script>
 
     <script type="text/coffeescript" src="test_helper.coffee"></script>
-    <script type="text/coffeescript" src="../../src/batman.coffee"></script>
+    <script type="text/javascript" src="../../lib/dist/batman.nodep.min.js"></script>
     <script type="text/coffeescript">Batman.exportGlobals()</script>
     
     <script type="text/coffeescript" src="utilities_test.coffee"></script>
