Start of Dispatcher rewrite.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -13,14 +13,15 @@
     <script type="text/coffeescript" src="test_helper.coffee"></script>
     <script type="text/coffeescript" src="../../src/batman.coffee"></script>
     <script type="text/coffeescript">Batman.exportGlobals()</script>
-    
+
     <script type="text/coffeescript" src="utilities_test.coffee"></script>
     <script type="text/coffeescript" src="object_test.coffee"></script>
     <script type="text/coffeescript" src="app_test.coffee"></script>
     <script type="text/coffeescript" src="controller_test.coffee"></script>
+    <script type="text/coffeescript" src="dispatcher_test.coffee"></script>
     <script type="text/coffeescript" src="model_test.coffee"></script>
     <script type="text/coffeescript" src="view_test.coffee"></script>
-    <script type="text/coffeescript" src="request_test.coffee"></script> 
+    <script type="text/coffeescript" src="request_test.coffee"></script>
     <script type="text/coffeescript" src="keypath_test.coffee"></script>
     <script type="text/coffeescript" src="observable_test.coffee"></script>
     <script type="text/coffeescript" src="hash_test.coffee"></script>
