--- a/examples/alfred_simple.html
+++ b/examples/alfred_simple.html
@@ -8,7 +8,7 @@
 
     <script type="text/javascript" src="/lib/coffee-script.js"></script>
     <script type="text/coffeescript" src="/src/batman.coffee"></script>
-    <script type="text/coffeescript" src="/src/batman.nodep.coffee"></script>
+    <script type="text/coffeescript" src="/src/batman.solo.coffee"></script>
 </head>
 
 <body>
@@ -22,7 +22,6 @@
             <li data-foreach-todo="Todo.all" data-mixin="animation">
                 <input type="checkbox" data-bind="todo.isDone" />
                 <label data-bind="todo.body" data-addclass-done="todo.isDone" data-mixin="editable"></label>
-                <label data-bind="todo.counter"></label>
                 <a data-event-click="todo.destroy">delete</a>
             </li>
             <li><span data-bind="Todo.all.length"></span> <span data-bind="'item' | pluralize Todo.all.length"></span>
@@ -39,10 +38,12 @@
 
       # Add some example todos to show off.
       index: @route('/', ->
-        if Alfred.Todo.get('all').length == 0
-          new Todo(body: 'joker escaped arkham again', isDone: true).save()
-          new Todo(body: 'riddler sent riemann hypothesis').save()
-          new Todo(body: 'bane wants to meet, not worried').save()
+        Todo.load ->
+          if Todo.get('all').length == 0
+            console.error "Adding example todos"
+            new Todo(body: 'joker escaped arkham again', isDone: true).save()
+            new Todo(body: 'riddler sent riemann hypothesis').save()
+            new Todo(body: 'bane wants to meet, not worried').save()
         return false
       )
 
@@ -57,17 +58,14 @@
 
 
     # Define the principle Todo model with `body` and `isDone` attributes, and tell it to persit itself using Local Storage.
-    count = 0
     class Alfred.Todo extends Batman.Model
       @global yes
 
       @persist Batman.LocalStorage
+      @encode 'body', 'isDone'
 
       body: ''
       isDone: false
-      constructor: ->
-        super
-        @set('counter', count++)
 
     # Start the app, making it start to listen to route change events.
     window.TodoController = TodoControllerClass.sharedInstance()
