Add storage adapter tests and redo LocalStorage.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -20,6 +20,7 @@
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="dispatcher_test.coffee"></script>
     <script type="text/coffeescript" src="model_test.coffee"></script>
+    <script type="text/coffeescript" src="storage_adapter_test.coffee"></script>
     <script type="text/coffeescript" src="view_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script>
     <script type="text/coffeescript" src="keypath_test.coffee"></script>
