--- a/examples/alfred_simple.html
+++ b/examples/alfred_simple.html
@@ -21,7 +21,7 @@
         <ul id="items">
             <li data-foreach-todo="Todo.all" data-mixin="animation">
                 <input type="checkbox" data-bind="todo.isDone" />
-                <label data-bind="todo.body" data-addclass-done="todo.isDone" data-mixin="editable"></label>
+                <label data-bind="todo.body" data-addclass-done="todo.isDone"</label>
                 <a data-event-click="todo.destroy">delete</a>
             </li>
             <li><span data-bind="Todo.all.length"></span> <span data-bind="'item' | pluralize Todo.all.length"></span>
@@ -38,12 +38,13 @@
 
       # Add some example todos to show off.
       index: @route('/', ->
-        Todo.load ->
+        Todo.load (err, todos) ->
+          throw err if err?
           if Todo.get('all').length == 0
-            console.error "Adding example todos"
-            new Todo(body: 'joker escaped arkham again', isDone: true).save()
-            new Todo(body: 'riddler sent riemann hypothesis').save()
-            new Todo(body: 'bane wants to meet, not worried').save()
+            error = (err) -> throw err if err?
+            new Todo(body: 'joker escaped arkham again', isDone: true).save(error)
+            new Todo(body: 'riddler sent riemann hypothesis').save(error)
+            new Todo(body: 'bane wants to meet, not worried').save(error)
         return false
       )
 
@@ -52,8 +53,9 @@
         @set 'todo', new Todo
 
       create: =>
-        @todo.save()
-        @set 'todo', new Todo
+        @todo.save (err) =>
+          throw err if err?
+          @set 'todo', new Todo
         return false
 
 
