Fix #6 - add test for data-event-submit on forms.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="../lib/jquery.js"></script>
     <script type="text/javascript" src="../lib/qunit.js"></script>
     <script type="text/javascript">QUnit.config.autostart = false</script>
+    <script type="text/javascript" src="../../lib/es5-shim.js"></script>
     <script type="text/javascript" src="../../lib/coffee-script.js"></script>
 
     <script type="text/coffeescript" src="test_helper.coffee"></script>
