--- a/examples/alfred.html
+++ b/examples/alfred.html
@@ -4,24 +4,25 @@
     <title>Alfred: Batman's Todos</title>
 
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/examples/resources/alfred.css" type="text/css">
+    <link rel="stylesheet" href="resources/alfred.css" type="text/css">
 
-    <script type="text/javascript" src="/lib/coffee-script.js"></script>
-    <script type="text/coffeescript" src="/src/batman.coffee"></script>
-    <script type="text/coffeescript" src="/src/batman.solo.coffee"></script>
+    <script type="text/javascript" src="../lib/es5-shim.js"></script>
+    <script type="text/javascript" src="../lib/batman.js"></script>
+    <script type="text/javascript" src="../lib/batman.solo.js"></script>
+    <script type="text/javascript" src="../lib/coffee-script.js"></script>
 </head>
 
 <body>
     <div id="container">
         <h1>Alfred</h1>
-        <form data-formfor-todo="TodoController.todo" data-event-submit="TodoController.create">
-          <input class="new-item" placeholder="add a todo item" data-bind="todo.body"/>
+        <form data-formfor-todo="controllers.todos.emptyTodo" data-event-submit="controllers.todos.create">
+          <input class="new-item" placeholder="add a todo item" data-bind="todo.body" />
         </form>
 
         <ul id="items">
             <li data-foreach-todo="Todo.all" data-mixin="animation">
                 <input type="checkbox" data-bind="todo.isDone" />
-                <label data-bind="todo.body" data-addclass-done="todo.isDone"</label>
+                <label data-bind="todo.body" data-addclass-done="todo.isDone" data-mixin="editable"></label>
                 <a data-event-click="todo.destroy">delete</a>
             </li>
             <li><span data-bind="Todo.all.length"></span> <span data-bind="'item' | pluralize Todo.all.length"></span>
@@ -32,31 +33,7 @@
     # Create our application and namespace.
     class Alfred extends Batman.App
       @global yes
-
-    class Alfred.TodoControllerClass extends Batman.Controller
-      @global yes
-
-      # Add some example todos to show off.
-      index: @route('/', ->
-        Todo.load (err, todos) ->
-          throw err if err?
-          if Todo.get('all').length == 0
-            error = (err) -> throw err if err?
-            new Todo(body: 'joker escaped arkham again', isDone: true).save(error)
-            new Todo(body: 'riddler sent riemann hypothesis').save(error)
-            new Todo(body: 'bane wants to meet, not worried').save(error)
-        return false
-      )
-
-      constructor: ->
-        super
-        @set 'todo', new Todo
-
-      create: =>
-        @todo.save (err) =>
-          throw err if err?
-          @set 'todo', new Todo
-        return false
+      @root 'todos#index'
 
 
     # Define the principle Todo model with `body` and `isDone` attributes, and tell it to persit itself using Local Storage.
@@ -69,8 +46,35 @@
       body: ''
       isDone: false
 
-    # Start the app, making it start to listen to route change events.
-    window.TodoController = TodoControllerClass.sharedInstance()
+
+    class Alfred.TodosController extends Batman.Controller
+      @global yes
+
+      index: ->
+        # setup a binding for the new form
+        @set 'emptyTodo', new Todo
+
+        # add some example todos to show off.
+        Todo.load (error, todos) ->
+          throw error if error
+          if not Todo.get('all').length
+            callback = (error) -> throw error if error
+            new Todo(body: 'joker escaped arkham again', isDone: true).save(callback)
+            new Todo(body: 'riddler sent riemann hypothesis').save(callback)
+            new Todo(body: 'bane wants to meet, not worried').save(callback)
+
+        # return false to prevent the implicit render of views/todos/index.html
+        return false
+
+      create: =>
+        @emptyTodo.save (error, record) =>
+          throw error if error
+          @set 'emptyTodo', new Todo
+
+        return false
+
+
+    # Start the app
     Alfred.run()
     </script>
 </body>
