use the proper form of 'principal'

--- a/examples/alfred.html
+++ b/examples/alfred.html
@@ -36,7 +36,7 @@
       @root 'todos#index'
 
 
-    # Define the principle Todo model with `body` and `isDone` attributes, and tell it to persist itself using Local Storage.
+    # Define the principal Todo model with `body` and `isDone` attributes, and tell it to persist itself using Local Storage.
     class Alfred.Todo extends Batman.Model
       @global yes # global exposes this class on the global object, so you can access `Todo` directly.
 
