--- a/download.html
+++ b/download.html
@@ -8,7 +8,7 @@ layout: default
   
   <!-- Begin download-box -->
   <div id="download-box">
-    <a class="btn-download" href="{{ site.download.filename }}">Download Batman.js</a>
+    <a class="btn-download" href="{{ site.download.filename }}" onclick="Observerapp.incrementEvent('58e9acdc')">Download Batman.js</a>
     <p>
       <span class="title">Latest version:</span> {{ site.download.version }} <br />
       <span class="title">Updated:</span> {{ site.download.date }}<br />
