Fixed typo in alfred.html

--- a/examples/alfred.html
+++ b/examples/alfred.html
@@ -46,7 +46,7 @@
       # @persist tells a model which storage mechanism it should use to load and save. Batman.LocalStorage is the simplest, simply persisting your records to the browser storage.
       @persist Batman.LocalStorage
 
-      # @encode tells the persistance mechanism which fields to archive. You can also setup specific encoder and decoder functions to handle specific types of data.
+      # @encode tells the persistence mechanism which fields to archive. You can also setup specific encoder and decoder functions to handle specific types of data.
       @encode 'body', 'isDone'
 
       # just some defaults, but these are optional
