Slightly better startup example.

--- a/download.html
+++ b/download.html
@@ -31,6 +31,10 @@ npm install -g batman
 {% highlight bash %}
 cd ~/code
 batman new my_app
+
+cd my_app
+batman server
+open http://localhost:1047
 {% endhighlight %}
   </div>
   <h6><a href="/examples.html">Get started</a> building things!</h6><br /><br />
