add twitter search client example

--- a/examples.html
+++ b/examples.html
@@ -24,6 +24,10 @@ layout: default
       <h4>Todo Tutorial</h4>
       <p>A straightforward walkthrough of creating a simple single page app. A great place to get started with batman.js.</p>
     </li>
+    <li class="feature-description">
+      <h4>A Simple Twitter Search Client</h4>
+      <p>The running example is running on Heroku <a href="http://afternoon-moon-519.herokuapp.com">here</a> and the code is on GitHub <a href="https://github.com/ktusznio/Bat-Tracer">here</a>.</p>
+    </li>
   </ul>
 
 </div>
