--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -31,6 +31,7 @@
     <script type="text/coffeescript" src="sortable_set_test.coffee"></script>
     <script type="text/coffeescript" src="property_test.coffee"></script>
     <script type="text/coffeescript" src="observable_property_test.coffee"></script>
+    <script type="text/coffeescript" src="set_index_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
 </head>
 
