--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -33,6 +33,7 @@
     <script type="text/coffeescript" src="observable_property_test.coffee"></script>
     <script type="text/coffeescript" src="set_index_test.coffee"></script>
     <script type="text/coffeescript" src="set_sort_test.coffee"></script>
+    <script type="text/coffeescript" src="unique_set_index_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
 </head>
 
