--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../../lib/es5-shim.js"></script>
 
     <script type="text/javascript" src="test_helper.js"></script>
-    <script type="text/javascript" src="../../lib/batman.js"></script>
+    <script type="text/javascript" src="../../src/batman.js"></script>
     <script type="text/javascript">Batman.exportGlobals();</script>
 
     <script type="text/javascript" src="utilities/mixin_test.js"></script>
