--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -25,6 +25,7 @@
     <script type="text/coffeescript" src="object/subclass_test.coffee"></script>
     <script type="text/coffeescript" src="app_test.coffee"></script>
     <script type="text/coffeescript" src="controller_test.coffee"></script>
+    <script type="text/coffeescript" src="data_test.coffee"></script>
     <script type="text/coffeescript" src="dispatcher_test.coffee"></script>
     <script type="text/coffeescript" src="model/model_helper.coffee"></script>
     <script type="text/coffeescript" src="model/model_test.coffee"></script>
