--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -20,6 +20,7 @@
     <script type="text/coffeescript" src="utilities/block_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/get_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/_batman_test.coffee"></script>
+    <script type="text/coffeescript" src="utilities/state_machine_test.coffee"></script>
     <script type="text/coffeescript" src="object/class_dsl_test.coffee"></script>
     <script type="text/coffeescript" src="object/integration_test.coffee"></script>
     <script type="text/coffeescript" src="object/subclass_test.coffee"></script>
@@ -34,6 +35,7 @@
     <script type="text/coffeescript" src="model/record_lifecycle_test.coffee"></script>
     <script type="text/coffeescript" src="model/state_transitions_test.coffee"></script>
     <script type="text/coffeescript" src="model/validations_test.coffee"></script>
+    <script type="text/coffeescript" src="model/dirty_keys_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/storage_adapter_helper.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/local_storage_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/rest_storage_test.coffee"></script>
