--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -18,11 +18,13 @@
     <script type="text/javascript" src="utilities/event_test.js"></script>
     <script type="text/javascript" src="utilities/block_test.js"></script>
     <script type="text/javascript" src="utilities/_batman_test.js"></script>
+    <script type="text/javascript" src="utilities/state_machine_test.js"></script>
     <script type="text/javascript" src="object/class_dsl_test.js"></script>
     <script type="text/javascript" src="object/integration_test.js"></script>
     <script type="text/javascript" src="object/subclass_test.js"></script>
     <script type="text/javascript" src="app_test.js"></script>
     <script type="text/javascript" src="controller_test.js"></script>
+    <script type="text/javascript" src="data_test.js"></script>
     <script type="text/javascript" src="dispatcher_test.js"></script>
     <script type="text/javascript" src="model/model_helper.js"></script>
     <script type="text/javascript" src="model/model_test.js"></script>
@@ -31,6 +33,7 @@
     <script type="text/javascript" src="model/record_lifecycle_test.js"></script>
     <script type="text/javascript" src="model/state_transitions_test.js"></script>
     <script type="text/javascript" src="model/validations_test.js"></script>
+    <script type="text/javascript" src="model/dirty_keys_test.js"></script>
     <script type="text/javascript" src="storage_adapter/storage_adapter_helper.js"></script>
     <script type="text/javascript" src="storage_adapter/local_storage_test.js"></script>
     <script type="text/javascript" src="storage_adapter/rest_storage_test.js"></script>
