Added batman.rails.coffee for handy rails compatability.

--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -12,6 +12,7 @@
 
     <script type="text/javascript" src="test_helper.js"></script>
     <script type="text/javascript" src="../../src/batman.js"></script>
+    <script type="text/javascript" src="../../src/batman.rails.js"></script>
     <script type="text/javascript">Batman.exportGlobals();</script>
 
     <script type="text/javascript" src="utilities/mixin_test.js"></script>
