--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -13,6 +13,7 @@
 
     <script type="text/coffeescript" src="test_helper.coffee"></script>
     <script type="text/coffeescript" src="../../src/batman.coffee"></script>
+    <script type="text/coffeescript" src="../../src/batman.rails.coffee"></script>
     <script type="text/coffeescript">Batman.exportGlobals()</script>
 
     <script type="text/coffeescript" src="utilities/mixin_test.coffee"></script>
